# openwrt

./: .gitconfig  vermagic
conf/: gl-ar300m16.config  x86-amd64.config
include/: image.mk  kernel-defaults.mk  version.mk
package/base-files/files/etc/: banner  shadow
package/extra/checknet/: Makefile
package/extra/checknet/files/: cfglte.sh  checknet.conf  checknet.init  checknet.sh  defaultapn.gcom  getinfo.gcom  getmwan.sh  mwan.lua
package/extra/luci-app-checknet/: Makefile
package/extra/luci-app-mgmtlanip/: Makefile
package/extra/luci-app-ugps/: Makefile
package/extra/mgmtlanip/files/: mgmtlanip.conf  mgmtlanip.init  mgmtlanip.sh
package/libs/libnftnl/patches/: 001-libnftnl-Add-fullcone-expression-support.patch
package/network/config/firewall/: Makefile
package/network/utils/fullconenat/: Makefile
package/network/utils/fullconenat-nft/: Makefile
package/system/default-settings/: Makefile
package/system/default-settings/files/: zz-default-settings
package/utils/fan-monitor/files/: fan-monitor.init  (+1 more)
package/utils/qlog/: Makefile
package/utils/qlog/src/: Android.mk  BUILD.gn  CMakeLists.txt  Makefile  Makefile.am  ReleaseNote.txt  asr.c  common.h  configure.ac  device.c  device.h  diag_pkt.c  diagcmd.h  eigen.c  ftp.c  list.h  main.c  mdm.c  meson.build  mtk.c  qdss1.c  ql-tty2tcp.c  qlog.h  qshrink4.c  sahara.c  sahara.h  sony.c  tftp.c  tty2tcp.c  unisoc.c  usb_linux.c  ymodem.c
package/utils/quectel-CM/: Makefile
package/utils/ugps/: Makefile
vsconf/target-mips_24kc_musl/: c_cpp_properties.json  launch.json  tasks.json
(+24 files in other folders)
